清理缓存修改

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,7 @@
         android:id="@+id/image_loader_fb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="FaceBook图片加载"/>
-
-    <Button
-        android:id="@+id/image_loader_ok"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="OKHttp图片加载"/>
-
-    <Button
-        android:id="@+id/image_loader_google"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Google图片加载"/>
+        android:text="图片加载"/>
 
     <Button
         android:id="@+id/clear_cache"
